# pde-solver

./: .harper-dictionary.txt  .pre-commit-config.yaml  LICENSE  Makefile  README.md  ROADMAP.md  designdocument.md  justfile  pyproject.toml  ruff.toml  validate_branch.sh
.github/workflows/: docs.yaml  publish.yml  pullrequests.yaml
docs/: main.tex  references.bib
docs/assets/: pde.drawio
scripts/: generate_pdes.py
src/numpy_ttd/: __init__.py  _helpers.py  _numpy_api.py  gradient.py  laplace.py  math.py  ops.py  tt_matrix.py  ttd.py  types.py
src/pde_solver/: GENERATE_PDES.py  PDE.py  boundary_conditions.py  operators.py  our_types.py  pde.py  pde_types.py  types.py
src/pde_solver/abc/: boundary.py  pde.py  solver.py
src/pde_solver/solvers/: finite_differences.py
tests/: boundary_test.py  common.py  core_solver_test.py  data.py  operators_test.py  pde_test.py  sample_test.py  solver_tester.py  test_integration.py  ttd_test.py
