[project]
name = "pde-solver"
version = "0.1.0"
description = "Library for working with tensors"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["numpy~=2.3"]

[dependency-groups]
dev = [
    "ruff~=0.14",
    "basedpyright~=1.34",
    "pre-commit~=4.4",
    "pytest~=9.0",
    "pytest-cov~=7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build]
sources = ["src"]

[tool.basedpyright]
include = ["src", "tests", "scripts"]

reportExplicitAny = false
reportImplicitStringConcatenation = false
reportImportCycles = false
reportMissingImports = "error"
reportMissingTypeArgument = false
