[project]
name = "pde"
version = "0.1.0"
description = "Library for working with tensors"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["numpy~=2.3"]

[dependency-groups]
dev = [
  "wren-ttd",
  "wren-pde-solver",
  "wren-common",
  "ruff~=0.14",
  "basedpyright~=1.34",
  "pre-commit~=4.4",
  "pytest~=9.0",
  "pytest-cov~=7.1",
]

[build-system]
requires = ["uv_build~=0.11.0"]
build-backend = "uv_build"

[tool.coverage.run]
branch = true

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
wren-ttd = { workspace = true }
wren-pde-solver = { workspace = true }
wren-common = { workspace = true }

[tool.basedpyright]
include = ["src", "packages/**/src", "tests", "scripts"]

reportExplicitAny = false
reportImplicitStringConcatenation = false
reportImportCycles = false
reportMissingImports = "error"
reportMissingTypeArgument = false
